<resources>
    <string name="app_name">Cool Grade</string>
    <string name="number_of_classes">Number of classes</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="done">Done</string>
    <string name="final_grade_result">FINAL GRADE</string>
    <string name="info">This app is made for the students who want to find their general grade of the semester, grade which is based on a weight assigned to the final exam grade.</string>
    <string name="info_title">Info</string>
    <string name="grade">Grade</string>
    <string name="weight">Weight</string>
    <string name="class_text">Class</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>
    <string name="skip_entering_classes_names">Skip entering classes names</string>
    <string name="save_classes">SAVE CLASSES</string>
    <string name="save_button_info">If you save the classes, next time you open the app and enter the same number and check skip classes names, the app will autocomplete the classes for you.</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
</resources>